Phase 1: Configuration Setup - RAG Module
Setup AstraDB and OpenAI configuration for RAG module implementation.

Changes:
- Add AstraDB config (token, endpoint, collection) to configuration.ts
- Add OpenAI config (apiKey, embeddingModel) to configuration.ts
- Update env.example with AstraDB and OpenAI variables
- Create rag.config.ts type definitions
- Update documentation (CLAUDE.md, README.md, docs/)

Tests: 3/3 passed
Code Review: 0 critical issues
Phase: 1/5 complete (20%)

--- a/env.example
+++ b/env.example
@@ -28,3 +28,15 @@ POSTGRES_DB_NAME=nestjs-base
 REDIS_URL=xxx
 REDIS_TTL=3600
 REDIS_TYPE=single
+
+# ===================================
+# AstraDB Configuration (for RAG)
+# ===================================
+ASTRA_DB_APPLICATION_TOKEN=AstraCS:xxxxx
+ASTRA_DB_ENDPOINT=https://<db-id>-<region>.apps.astra.datastax.com
+ASTRA_DB_COLLECTION=documents
+
+# ===================================
+# OpenAI Configuration (for Embeddings)
+# ===================================
+OPENAI_API_KEY=sk-xxxxx
