--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@mikro-orm/postgresql": "^6.5.6",
     "@mikro-orm/seeder": "^6.5.6",
     "@nestjs-modules/ioredis": "^2.0.2",
+    "@nestjs/bull": "^10.2.3",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.0",
@@ -41,7 +43,8 @@
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@types/lodash": "^4.14.197",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
+    "bullmq": "^5.67.2",
     "cache-manager": "^6.4.3",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
@@ -49,13 +52,18 @@
     "decimal.js": "^10.5.0",
     "dotenv": "^16.5.0",
     "ethers": "^6.14.3",
+    "file-type": "^21.3.0",
     "ioredis": "^5.6.1",
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^2.4.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.2.0",
     "siwe": "^3.0.0",
+    "uuid": "^13.0.0",
     "viem": "^2.30.5"
   },
   "devDependencies": {
@@ -65,10 +73,12 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "18.15.11",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -83,22 +93,5 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.3.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
