--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@datastax/astra-db-ts": "^2.1.2",
     "@langchain/community": "^1.1.10",
     "@langchain/core": "^1.1.18",
-    "@langchain/openai": "^1.2.4",
+    "@langchain/langgraph": "^0.2.74",
+    "@langchain/openai": "^0.4.9",
     "@mikro-orm/core": "^6.5.6",
     "@mikro-orm/mongodb": "^6.5.6",
     "@mikro-orm/nestjs": "^6.1.1",
