Phase 6: Orchestration Service - Implementation
Implements the orchestration layer that coordinates all agents for
pitch deck analysis.

Features:
- OrchestratorService: Coordinates 7 agents (4 scoring + 3 analysis)
- AnalysisService: Main service for managing analysis lifecycle
- CalculatorService: Weighted score calculation
- AnalysisRepository: Custom repository with deck-based queries
- AnalysisJobProcessor: BullMQ job processor for async execution
- Updated AnalysisModule: Agent imports and EM injection

Technical Details:
- Sequential agent execution with state tracking
- Progress events via EventEmitter2
- Weighted scoring: sector(30%), stage(25%), thesis(25%), history(20%)
- Proper error handling with status updates
- Entity references using MikroORM Reference

Grade: B+ (code review)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "@utils/*": ["src/utils/*"],
       "@config/*": ["src/config/*"],
       "@libs/*": ["src/libs/*"],
+      "@agents/*": ["src/agents/*"],
       "@/*": ["src/*"]
     },
     "incremental": true,
