feat: Introduce document processing and vision extraction services for pitch decks and remove the custom JWT middleware.

--- a/env.example
+++ b/env.example
@@ -40,3 +40,10 @@ ASTRA_DB_COLLECTION=documents
 # OpenAI Configuration (for Embeddings)
 # ===================================
 OPENAI_API_KEY=sk-xxxxx
+
+# ===================================
+# Vision Extraction (for image-only PDFs)
+# ===================================
+VISION_EXTRACTION_ENABLED=true
+VISION_MODEL=gpt-4o
+VISION_MAX_TOKENS=4096
