--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@langchain/core": "^1.1.18",
     "@langchain/langgraph": "^0.2.74",
     "@langchain/openai": "^0.4.9",
+    "@langchain/textsplitters": "^1.0.1",
     "@mikro-orm/core": "^6.5.6",
     "@mikro-orm/mongodb": "^6.5.6",
     "@mikro-orm/nestjs": "^6.1.1",
@@ -60,7 +61,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pdf-parse": "^2.4.5",
+    "pdf-parse": "1.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.2.0",
     "siwe": "^3.0.0",
